<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skylight.apollo.StitchActivity"
    android:keepScreenOn="true"
    android:background="@color/colorPrimary">

    <!--<com.kandaovr.sdk.view.RenderView-->
        <!--android:id="@+id/surfaceView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:keepScreenOn="true"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
    android:visibility="gone">

        <Button
            android:id="@+id/browseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stitch_browse"/>

        <Button
            android:id="@+id/captureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stitch_capture"/>

        <Button
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stitch_record"/>

        <Button
            android:id="@+id/streamButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stitch_stream"/>

     </LinearLayout>

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:gravity="center"
    android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/label"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
    android:visibility="gone">

        <Button
            android:id="@+id/frontCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:text="@string/stitch_front_camera"/>

        <Button
            android:id="@+id/screenshotButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/stitch_screenshot"/>

        <Button
            android:id="@+id/rearCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:text="@string/stitch_rear_camera"/>
    </LinearLayout>



    <Button
        android:layout_below="@id/layout0"
        android:id="@+id/adjustCalibrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        android:visibility="gone"
        android:text="Start Auto Calibration"/>
    <Button
        android:id="@+id/btn_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_margin="1dp"
        android:text="OK"/>
    <Button
        android:id="@+id/btn_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:visibility="visible"
        android:layout_margin="1dp"
        android:text="NG"/>
</RelativeLayout>
