<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skylight.apollo.ReplayActivity">

    <com.kandaovr.sdk.view.RenderView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="#88000000">
        <TextView
            android:id="@+id/captureButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:text="@string/replay_capture"/>
        <TextView
            android:id="@+id/projectionButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:text="@string/replay_projection_perspective"/>
        <TextView
            android:id="@+id/modeButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:text="@string/replay_mode_hand"/>
    </LinearLayout>

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:gravity="center"/>

</RelativeLayout>
